Set the isCollapsed variable state over 576px at window resize and fix the dropdown menu

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,6 +39,7 @@ nav {
   }
 
   ul {
+    position: relative;
     li.nav-item {
       .nav-link {
         color: #504f68;
